--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   
-  {% block title %}<title>Local Library</title>{% endblock %}
+  {% block title %}{% endblock %}
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -23,7 +23,7 @@
       {% block sidebar %}
       <ul class="sidebar-nav">
           <li><a href="{% url 'index' %}">Home</a></li>
-          <li><a href="">All books</a></li>
+          <li><a href="{% url 'books' %}">All books</a></li>
           <li><a href="">All authors</a></li>
       </ul>
      {% endblock %}
