--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "base_generic.html" %}
 
+{% block title %}<title>Local Library NT</title>{% endblock %}
+
 {% block content %}
 <h1>Local Library Home</h1>
 
@@ -13,6 +15,7 @@
     <li><strong>Copies:</strong> {{ num_instances }}</li>
     <li><strong>Copies available:</strong> {{ num_instances_available }}</li>
     <li><strong>Authors:</strong> {{ num_authors }}</li>
+    <li><strong>Genres:</strong> {{ num_genres }}</li>
   </ul>
 
 {% endblock %}
